--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <div class="wrapper">
      <h1>Welcome to Riyadh</h1>
      <h2>Where A Traditional Past Meets A Modern Future.</h2>
-
-
+    <h3>Travel</h3>
     <div id="content">
        <img src="./images/transportation/transit.jpg" alt="Modern Transit" />
     </div>
