--- a/index.html
+++ b/index.html
@@ -7,12 +7,23 @@
 </head>
 <body>
   <div class="wrapper">
-     <h1>Welcome to Riyadh</h1>
-     <h2>Where A Traditional Past Meets A Modern Future.</h2>
-    <h3>Travel</h3>
+    <!-- HEADER -->
+    <h1>Welcome to Riyadh</h1>
+    <!-- SUB HEAD -->
+    <h2>Where A Traditional Past Meets A Modern Future.</h2>
+
     <div id="content">
-       <img src="./images/transportation/transit.jpg" alt="Modern Transit" />
+      <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
+      <img src="./images/transportation/transit.jpg" alt="Modern Transit" />
+      <h3>Travel</h3>
+      <h3>History</h3>
+      
+      <img src="./images/garden.jpg" alt="Riyadh Garden" />
+
+    
+      <img src="./images/transportation/camels-in-truck.jpg" alt="The roads of Riyadh" />
+
+      <h3>Sources</h3>
     </div>
   </div>
 </body>
-</html>
